--- a/data/features.yaml
+++ b/data/features.yaml
@@ -4,7 +4,7 @@ about:
   email: dgmelita9@gmail.com
   links:
     - title: diogo-melita
-      url: https://tr.linkedin.com/in/diogo-melita
+      url: https://linkedin.com/in/diogo-melita
       icon: fab fa-linkedin
     - title: d-melita
       url: https://github.com/d-melita
