--- a/config.yaml
+++ b/config.yaml
@@ -70,7 +70,7 @@ params:
         - feature: experience
         - feature: education
         - feature: awards
-          title: Hobbies
+          title: HobbiesZ
              
   footer:
     show: true
