--- a/data/experience.yaml
+++ b/data/experience.yaml
@@ -1,5 +1,5 @@
 - company: DSI @ Instituto Superior Técnico
   roles:
     - role: Full Stack Developer
-      details: "As a part of a research initiation fellowship granted by IST, I was able to have my first contact with production-level application development, including a platform aiming to allow the university's community to submit online forms, thereby easing the maintenance and sharing of the school's information."
+      details: "As a part of a research initiation fellowship granted by IST, I was able to have my first contact with production-level application development, working on a platform that allows the university's community to submit online forms, thereby easing the maintenance and sharing of the school's information."
       date: "May 2023 -  Present"
