major update to curriculum

--- a/data/education.yaml
+++ b/data/education.yaml
@@ -1,9 +1,9 @@
-- name: "Msc. Computer Science and Engineering"
-  university: "Instituto Superior Técnico"
-  date: "Sep 2023 - Present"
-  gpa: ""
+- name: "Master's Degree Computer Science and Engineering"
+  university: "Instituto Superior Técnico, Universidade de Lisboa"
+  date: "2023 - Present"
+  avg: ""
 
 - name: "Bsc. Computer Science and Engineering"
-  university: "Instituto Superior Técnico"
-  date: "Sep 2020 - Jun 2023"
-  gpa : "17 / 20"
+  university: "Instituto Superior Técnico, Universidade de Lisboa"
+  date: "2020 - 2023"
+  avg: "17/20"
