--- a/data/experience.yaml
+++ b/data/experience.yaml
@@ -1,4 +1,4 @@
-- company: 'Rede das Novas Licenciaturas - Computer Science Department, Instituto Superior Técnico'
+- company: 'DSI - Instituto Superior Técnico'
   roles:
     - role: Research Initiation Fellowship
       details: | 
