--- a/data/features.yaml
+++ b/data/features.yaml
@@ -60,5 +60,5 @@ awards:
 
 certificates:
   - title: "Academic Merit"
-    subtitle: Diploma for the 2021/2022 Academic Year
+    subtitle: Diploma for the 2021\/2022 Academic Year
     date: "2022"
