--- a/config.yaml
+++ b/config.yaml
@@ -51,7 +51,7 @@ params:
     - custom.scss
 #   - print_urls.scss
   header:
-    avatar: avatar.jpg
+#    avatar: avatar.jpg
     contact: true
     tagline: true
     links: true
@@ -73,7 +73,7 @@ params:
     show: true
     credits: false
     footnote: >-
-      You can print this resume in A4 size or save as pdf. | Last update on 2023-07-20.
+      You can print this resume in A4 size or save as pdf. | Last update on 2024-10-17.
     links: 
       - title: Linkedin
         url: 'https://linkedin.com/in/diogo-melita/'
