--- a/data/experience.yaml
+++ b/data/experience.yaml
@@ -1,7 +1,9 @@
-- company: 'DSI - Instituto Superior Técnico'
+- company: Full Stack Developer - Fellowship
   roles:
-    - role: Research Initiation Fellowship
+    - role: DSI - Instituto Superior Técnico
       details: | 
-        - As a part of a research initiation fellowship granted by IST, I was able to have my first contact with production‑level application development, working on a platform used by around 10k people that allows the university’s community to create and submit standardized online forms, thereby easing the maintenance and sharing of the school’s information.
-        - Worked with diverse teams of five elements, including developers and designers, on a collaborative environment for brainstorming and idea exchange, to create user‑friendly forms, improving the submission process for the university community.
-      date: "May 2023 -  April 2024"
+        - Had my first contact with production-level application development, working on a platform used by more than 10 000 users that allows the university’s community to create and submit standardized online forms, thereby easing the maintenance and sharing of the school’s information.
+        - Developed  3 robust backend endpoints for the platform, enabling dynamic information processing within standardized forms.
+        - Designed 15 intuitive and user-friendly frontend interfaces, including a specialized form creation tool, allowing users to create forms tailored to their needs. This tool empowers users with the ability to select from various form elements and apply conditional logic.
+        - Worked with diverse teams of 5 elements, including developers and designers, on a collaborative environment for brainstorming and idea exchange, to create user-friendly forms, improving the submission process for the university community.
+        date: "May 2023 -  April 2024"
