--- a/config.yaml
+++ b/config.yaml
@@ -51,29 +51,29 @@ params:
     - custom.scss
 #   - print_urls.scss
   header:
-#    avatar: avatar.jpg
+    avatar: avatar.jpg
     contact: true
     tagline: true
     links: true
   side:
-    - feature: education
     - feature: skills
       widget: word-list
       style: compact # list, compact, title-list
     - feature: languages
+    - feature: awards
+      title: Hobbies
 
   pages:
     - features:
         - feature: experience
+        - feature: education
         - feature: certificates
-        - feature: awards
-          title: Hobbies
              
   footer:
     show: true
     credits: false
     footnote: >-
-      You can print this resume in A4 size or save as pdf. | Last update on 2024-10-17.
+      You can print this resume in A4 size or save as pdf. | Last update on 2023-07-20.
     links: 
       - title: Linkedin
         url: 'https://linkedin.com/in/diogo-melita/'
