--- a/data/experience.yaml
+++ b/data/experience.yaml
@@ -1,9 +1,18 @@
+- company: Researcher
+  roles:
+    - role: INESC-ID
+      details: |
+        - Currently investigating an alternative approach for blockchain transaction reversals using Layer 2 systems to enhance scalability and dispute resolution.
+        - Developing models that balance immutability and controlled mutability to ensure blockchain integrity and user trust.
+        - Designing recovery protocols and blockchain patterns for resilience against transaction failures or intrusions.
+      date: "Jan 2025 - Present"
+
 - company: Full Stack Developer - Fellowship
   roles:
     - role: DSI - Instituto Superior Técnico
       details: | 
-        - Had my first contact with production-level application development, working on a platform used by more than 10 000 users that allows the university’s community to create and submit standardized online forms, thereby easing the maintenance and sharing of the school’s information.
+        - Had my first contact with production-level application development, working on a platform used by more than 10 000 users that allows the university’s community to create and submit standardized online forms.
         - Developed  3 robust backend endpoints for the platform, enabling dynamic information processing within standardized forms.
-        - Designed 15 intuitive and user-friendly frontend interfaces, including a specialized form creation tool, allowing users to create forms tailored to their needs. This tool empowers users with the ability to select from various form elements and apply conditional logic.
-        - Worked with diverse teams of 5 elements, including developers and designers, on a collaborative environment for brainstorming and idea exchange, to create user-friendly forms, improving the submission process for the university community.
-        date: "May 2023 -  April 2024"
+        - Designed 15 intuitive and user-friendly frontend interfaces, including a specialized form creation tool, allowing users to create forms tailored to their needs.
+        - Worked with a diverse team of 5 elements on a collaborative environment for brainstorming and idea exchange, to create user-friendly forms, improving the submission process for the university community.
+      date: "May 2023 -  April 2024"
